---
source: src/parsers/mail_parser.rs
expression: "cell_section(\"POI1  \\n\\nM1 N2   \\nM2 N3\\nFINSF\")"
---
Ok(
    (
        "",
        Cells(
            [
                CellProp {
                    cell_type: POI1,
                    name: Some(
                        "M1",
                    ),
                    nodes: [
                        "N2",
                    ],
                },
                CellProp {
                    cell_type: POI1,
                    name: Some(
                        "M2",
                    ),
                    nodes: [
                        "N3",
                    ],
                },
            ],
        ),
    ),
)
